[gd_scene load_steps=4 format=3 uid="uid://c1jx6x1hs7f51"]

[ext_resource type="PackedScene" uid="uid://ynjdjcukvk4c" path="res://common/dice/dice.tscn" id="1_01x0e"]
[ext_resource type="Script" uid="uid://dty0q4oaf3sk3" path="res://common/screens/dice_selection_screen/dice_selection_card.gd" id="1_lctdf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01x0e"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5067887, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(1, 0, 0, 0.2)
shadow_size = 1
shadow_offset = Vector2(0, 5)

[node name="DiceSelectionCard" type="Button"]
custom_minimum_size = Vector2(128, 192)
offset_right = 128.0
offset_bottom = 192.0
theme_override_styles/normal = SubResource("StyleBoxFlat_01x0e")
script = ExtResource("1_lctdf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 126.0
offset_bottom = 190.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="DiceNameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 0, 0.26352262, 1)
bbcode_enabled = true
text = "Dice Name"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dice" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_01x0e")]
layout_mode = 2
size_flags_horizontal = 4

[node name="DiceDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "This is the label description for this dice"
horizontal_alignment = 1
autowrap_mode = 2
